Specification Review: Links
The Homepage should have fake links, such as "About", "Search", and "Subscribe".

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     <body class = "container">
         <!-- Header Area -->
         <header class="header">
+            <nav>
+                <ul>
+                  <li><a href="https://www.blogger.com/profile/12124067201509144327">My Personal Blog</a></li>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="https://www.google.com/">Search</a></li>
+                  <li><a href="https://www.blogger.com/profile/12124067201509144327">About</a></li>
+                  <li><a href="https://www.blogger.com/profile/12124067201509144327">Subscribe</a></li>
+                </ul>
+              </nav>
             <h2 style="text-align: center;">IBM Data Analysis Contest</h2>
         </header>
         <!--/ End Header Area -->
