Specification Review : Design-components
In this project, you must include figcaption(opens in a new tab) and button(opens in a new tab).

--- a/pages/blog-post-1.html
+++ b/pages/blog-post-1.html
@@ -80,13 +80,40 @@
 
             <div style="display: block; align-content: center;">
                 <div class="cards">
-                    <img src="../imgs/03.png" alt="sample image">
-                    <img src="../imgs/3.png" alt="sample image">
-                    <img src="../imgs/04.png" alt="sample image">
-                    <img src="../imgs/4.png" alt="sample image">
-                    <img src="../imgs/05.png" alt="sample image">
-                    <img src="../imgs/1.png" alt="sample image">
-                    <img src="../imgs/2.png" alt="sample image">
+                    <figure onclick="window.open('../imgs/03.png', '_blank');">
+                        <img src="../imgs/03.png" alt="Fig-03">
+                        <figcaption><b> Fig-03 :</b> Comparing predictive and label variables</figcaption>
+                    </figure>
+
+                    <figure onclick="window.open('../imgs/3.png', '_blank');">
+                        <img src="../imgs/3.png" alt="Fig-3">
+                        <figcaption><b> Fig-3 :</b> Which Airlines have the longest delays?</figcaption>
+                    </figure>
+
+                    <figure onclick="window.open('../imgs/04.png', '_blank');">
+                        <img src="../imgs/04.png" alt="Fig-04">
+                        <figcaption><b> Fig-04 :</b> Distribution Plot</figcaption>
+                    </figure>
+
+                    <figure onclick="window.open('../imgs/4.png', '_blank');">
+                        <img src="../imgs/4.png" alt="Fig-4">
+                        <figcaption><b> Fig-4 :</b> The best day to travel</figcaption>
+                    </figure>
+
+                    <figure onclick="window.open('../imgs/05.png', '_blank');">
+                        <img src="../imgs/05.png" alt="Fig-05">
+                        <figcaption><b> Fig-05 :</b> What is the worst time of day to travel?</figcaption>
+                    </figure>
+
+                    <figure onclick="window.open('../imgs/1.png', '_blank');">
+                        <img src="../imgs/1.png" alt="Fig-1">
+                        <figcaption><b> Fig-1 :</b> Flights status distribution for sampling dataset</figcaption>
+                    </figure>
+
+                    <figure onclick="window.open('../imgs/2.png', '_blank');">
+                        <img src="../imgs/2.png" alt="Fig-2">
+                        <figcaption><b> Fig-2 :</b> Flight delay reasons and how much they contribute to the number of delayed flights</figcaption>
+                    </figure>
                 </div>
             </div>
                   
@@ -107,7 +134,8 @@
                 <a href="https://x.com/">            <i class="fa-brands fa-x-twitter"></i></a>                
                 <a href="https://stackoverflow.com/"><i class="fa-brands fa-stack-overflow"></i></a>
                 <a href="https://github.com/">       <i class="fa-brands fa-github"></i></a>               
-              </div>
+                <button class="btn-profile" onclick="window.open('#', '_blank');">Email</button>
+            </div>
         
         </div>
         <!--/ End Sidebar Area -->
