--- a/pages/blog-post-1.html
+++ b/pages/blog-post-1.html
@@ -59,10 +59,14 @@
             <li class="list-cl"> Unstable arrival delay between 12:00 AM to 05:00 AM, a huge crowd gathered between 05:00 AM to 05:30 AM</li>
             
             <h3>Dataset Overview</h3>
-            <p> Reporting Carrier On-Time Performance Dataset contains information on approximately 200 million domestic US flights reported to the United States Bureau of Transportation Statistics. 
+            <p> Reporting Carrier On-Time Performance Dataset contains information on approximately <b><u>200 million</u></b> domestic US flights reported to the <b><em> United States Bureau of Transportation Statistics</em></b> [1] . 
                 The dataset contains basic information about each flight (such as date, time, departure airport, arrival airport) and, if applicable, the amount of time the flight was delayed, and information about the reason for the delay. 
                 This dataset can be used to predict the likelihood of a flight arriving on time.
-            </p>   
+            </p>  
+            
+            <blockquote cite="https://www.bts.gov/" onclick="window.open('https://www.bts.gov/', '_blank');">
+                <em>[1]</em> The Bureau of Transportation Statistics (BTS), part of the Department of Transportation (DOT) is the preeminent source of statistics on commercial aviation, multimodal freight activity, and transportation economics, and provides context to decision makers and the public for understanding statistics on transportation. 
+            </blockquote>
 
             <h3>Import required packages</h3>
             <li class="list-cl">pandas</li>
