Details Specification : Structure - CSS seperate from Html
There should be no inline CSS inside your Html files, all the style properties should be inside your CSS files.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <li><a href="https://www.blogger.com/profile/12124067201509144327">Subscribe</a></li>
                 </ul>
               </nav>
-            <h2 style="text-align: center;">IBM Data Analysis Contest</h2>
+            <h2 class="txt-center">IBM Data Analysis Contest</h2>
         </header>
         <!--/ End Header Area -->
 
