--- a/pages/blog-post-1.html
+++ b/pages/blog-post-1.html
@@ -32,7 +32,7 @@
         <header class="header">
             <a href="../index.html"> go back </a>
             <br>
-            <h1 style="text-align: center;"> Airline on-time performance Arrival Delay Forecasting</h1> 
+            <h1 class="txt-center"> Airline on-time performance Arrival Delay Forecasting</h1> 
         </header>
         <!--/ End Header Area -->
 
@@ -42,7 +42,7 @@
             <a class="profile-link" href="https://www.blogger.com/profile/12124067201509144327" rel="author">by mahmoud lotfi</a>
             <br>
             <div>
-                <img src="../imgs/cover.jpg" alt="post-cover" style="display: block; width: 100%; height: 250px;">
+                <img src="../imgs/cover.jpg" alt="post-cover" class="img-cover">
             </div>
         
             <h3>key findings:</h3>
@@ -131,7 +131,7 @@
                 
                 <h5>Mahmoud Lotfi</h5>
                 <p class="title-profile">Data Engineer, Guru</p>
-                <p class="span-date" style="text-align: center;">Alexandria University</p>
+                <p class="span-date" class="txt-center">Alexandria University</p>
 
                 <a href="https://whatsapp.com/">     <i class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://facebook.com/">     <i class="fa-brands fa-facebook"></i></a>
