Specification Review :  Responsiveness
Responsiveness should be checked after making final changes.

--- a/pages/blog-post-1.html
+++ b/pages/blog-post-1.html
@@ -82,7 +82,7 @@
 
             <br>
 
-            <div style="display: block; align-content: center;">
+            <div class="gallary-div">
                 <div class="cards">
                     <figure onclick="window.open('../imgs/03.png', '_blank');">
                         <img src="../imgs/03.png" alt="Fig-03">
