--- a/pages/blog-post-1.html
+++ b/pages/blog-post-1.html
@@ -41,9 +41,11 @@
             <h3> Part II Airline on-time performance predictive model for Arrival delay</h3>
             <a class="profile-link" href="https://www.blogger.com/profile/12124067201509144327" rel="author">by mahmoud lotfi</a>
             <br>
-            <div>
+            <figure onclick="window.open('../imgs/03.png', '_blank');">
                 <img src="../imgs/cover.jpg" alt="post-cover" class="img-cover">
-            </div>
+                <figcaption><b> Fig-00 : Post Cover</b> </figcaption>
+            </figure>
+
         
             <h3>key findings:</h3>
             <li class="list-cl"> Flights status distribution for sampling dataset&nbsp;</li>
